[gd_scene load_steps=3 format=3 uid="uid://bqi3y7ulf3amw"]

[ext_resource type="Script" path="res://Interface/Interface.gd" id="1_arkjc"]
[ext_resource type="StyleBox" uid="uid://cibwasn0q46kk" path="res://Interface/Interface.tres" id="1_wxonn"]

[node name="Interface" type="CanvasLayer"]
script = ExtResource("1_arkjc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_right = 68.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlanetCounter" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("1_wxonn")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPSLabel" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("1_wxonn")
text = "FPS: "

[node name="PausedLabel" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("1_wxonn")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="Control/LabelContainer"]
layout_mode = 2

[node name="PlanetInteraction" type="CheckBox" parent="Control/LabelContainer/SettingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("1_wxonn")
theme_override_styles/pressed = ExtResource("1_wxonn")
theme_override_styles/disabled = ExtResource("1_wxonn")
theme_override_styles/hover = ExtResource("1_wxonn")
theme_override_styles/hover_pressed = ExtResource("1_wxonn")
theme_override_styles/focus = ExtResource("1_wxonn")
button_pressed = true
text = "Planet Interaction"

[node name="UseComputeShader" type="CheckBox" parent="Control/LabelContainer/SettingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("1_wxonn")
theme_override_styles/pressed = ExtResource("1_wxonn")
theme_override_styles/disabled = ExtResource("1_wxonn")
theme_override_styles/hover = ExtResource("1_wxonn")
theme_override_styles/hover_pressed = ExtResource("1_wxonn")
theme_override_styles/focus = ExtResource("1_wxonn")
button_pressed = true
text = "Use Compute Shader"

[connection signal="toggled" from="Control/LabelContainer/SettingsContainer/PlanetInteraction" to="." method="_on_planet_interaction_toggled"]
[connection signal="toggled" from="Control/LabelContainer/SettingsContainer/UseComputeShader" to="." method="_on_use_compute_shader_toggled"]
